# ethereum-protocol-lab

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
common/: jsonrpc.py  logger.py  plot.py
tests/: test_sanity.py
