[project]
name = "ethereum-protocol-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.142.1",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.14.1",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.3.0",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
pretty = true
